Pygments changelog
==================

Since 2.5.0, issue numbers refer to the tracker at
<https://github.com/pygments/pygments/issues>,
pull request numbers to the requests at
<https://github.com/pygments/pygments/pulls>.


Version 2.11.0
--------------
(not released yet)

- Added lexers:

  * Maxima (#1885)

- Clean up unused imports (#1887)

Version 2.10.0
--------------
(released August 15th, 2021)

- Added lexers:

  * ASC armored files (#1807)
  * GSQL (#1809, #1866)
  * Javascript REPL (#1825)
  * procfile (#1808)
  * Smithy (#1878, #1879)

- Updated lexers:

  * C-family: Fix preprocessor token issues (#1830)
  * C# (#1573, #1869)
  * CSound (#1837)
  * Fennel (#1862)
  * JavaScript (#1741, #1814)
  * LLVM (#1824)
  * Rust
  
    - Fix lexing of "break" and "continue" (#1843)
    - Improve attribute handling (#1813)

  * Scala: Add support for the ``\`` operator (#1857)
  * Swift (#1767, #1842)
  * Tcl: Allow ``,`` and ``@`` in strings (#1834, #1742)

- Fix assert statements in TNT lexer.
- Token types across all lexers have been unified (using the most common token
  type name) (#1816, #1819)
- Improve Jasmin min score analysis (#1619)
- Add new alias for Go files (#1827)
- Fix multi-line console highlighting (#1833)
- Add a new trivial lexer which outputs everything as `Text.Generic.Output` (#1835, #1836)
- Use the ``.ini`` lexer for ``systemd`` files (#1849)
- Fix a ``FutureWarning`` related to ``words()`` (#1854)
- ``pwsh`` is now recognized as an alias for PowerShell (#1876)


Version 2.9.0
-------------
(released May 3rd, 2021)

- Added lexers:

  * APDL, gcode (#1714)
  * Kuin (#1300)
  * NestedText (#1578)
  * OMG IDL (#1595)
  * TEAL (#1671)
  * ThingsDB (#1295)
  * WebAssembly (#1416, #1564)

- Updated lexers:

  * AMDGPU (#1717, #1775)
  * APL (#1747)
  * C/C++: Improve namespace handling (#1722, #1561, #1719, #1746)
  * Chapel (#1743)
  * Coq (#1721)
  * Cython (#853)
  * Groovy (#1765)
  * Julia (#1715)