@@ -15,6 +15,10 @@ Version 2.11.0
 
   * Maxima (#1885)
 
+- Updated lexers:
+
+  * Terraform: Support heredocs (#1909)
+
 - Clean up unused imports (#1887)
 
 Version 2.10.0
